<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.weesli</groupId>
    <artifactId>RClaim</artifactId>
    <version>1.9.0</version>
    <packaging>jar</packaging>

    <name>RClaim</name>

    <properties>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <defaultGoal>clean package</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <relocations>
                                <relocation>
                                    <pattern>dev.triumphteam.cmd</pattern>
                                    <shadedPattern>net.weesli.cmd</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.bstats</pattern>
                                    <shadedPattern>net.weesli.bstats</shadedPattern>
                                </relocation>
                            </relocations>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <!-- SirBlobman Public Repository -->
        <repository>
            <id>sirblobman-public</id>
            <url>https://nexus.sirblobman.xyz/public/</url>
        </repository>
        <repository>
            <id>triumphteam</id>
            <url>https://repo.triumphteam.dev/snapshots</url>
        </repository>
        <repository>
            <id>papermc-repo</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>helpchat-repo-releases</id>
            <name>HelpChat Maven Repository</name>
            <url>https://repo.helpch.at/releases</url>
        </repository>
        <repository>
            <id>codemc-repo</id>
            <url>https://repo.codemc.io/repository/maven-public/</url>
            <layout>default</layout>
        </repository>
        <repository>
            <id>SilkSpawners-Repo</id>
            <url>https://repo.dustplanet.de/artifactory/libs-release-local</url>
        </repository>
        <repository>
            <id>eldonexus</id>
            <url>https://eldonexus.de/repository/maven-releases/</url>
        </repository>
        <repository>
            <id>rosewood-repo</id>
            <url>https://repo.rosewooddev.io/repository/public/</url>
        </repository>
        <repository>
            <id>sk89q-repo</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>
        <repository>
            <id>MikeRepo</id>
            <url>https://repo.mikeprimm.com/</url>
        </repository>
        <repository>
            <id>bluecolored</id>
            <url>https://repo.bluecolored.de/releases</url>
        </repository>
        <repository>
            <id>jitpack</id>
            <url>https://jitpack.io/</url>
        </repository>
        <repository>
            <id>CodeMC</id>
            <url>https://repo.codemc.org/repository/maven-public/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.21.1-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.Weesli</groupId>
            <artifactId>RLib</artifactId>
            <version>1.8.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.6</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.decentsoftware-eu</groupId>
            <artifactId>decentholograms</artifactId>
            <version>2.8.5</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>de.rapha149.signgui</groupId>
            <artifactId>signgui</artifactId>
            <version>2.4.0</version>
        </dependency>
        <dependency>
            <groupId>de.corneliusmay</groupId>
            <artifactId>silkspawners</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/SilkSpawners_v2.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.github.angeschossen</groupId>
            <artifactId>UpgradeableSpawnersAPI</artifactId>
            <version>4.1.1</version>
            <scope>provided</scope>
        </dependency>
        <!-- PlayerPoints -->
        <dependency>
            <groupId>org.black_ixx</groupId>
            <artifactId>playerpoints</artifactId>
            <version>3.2.6</version>
            <scope>provided</scope>
        </dependency>
        <!-- SpawnerMeta -->
        <dependency>
            <groupId>com.github.OfficialRell</groupId>
            <artifactId>SpawnerMeta</artifactId>
            <version>24.4</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.artillexstudios</groupId>
            <artifactId>axminions</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/AxMinions-1.0.11-all.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.github.WaterArchery</groupId>
            <artifactId>LitMinionsAPI</artifactId>
            <version>3.1.7</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.jet315</groupId>
            <artifactId>JetMinions</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/JetsMinions-API.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.sk89q.worldguard</groupId>
            <artifactId>worldguard-bukkit</artifactId>
            <version>7.0.9</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.34</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>dev.triumphteam</groupId>
            <artifactId>triumph-cmd-bukkit</artifactId>
            <version>2.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>3.0.3</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>us.dynmap</groupId>
            <artifactId>DynmapCoreAPI</artifactId>
            <version>3.7-beta-6</version>
            <scope>provided</scope>
        </dependency>
        <!-- CombatLogX API -->
        <dependency>
            <groupId>com.github.sirblobman.combatlogx</groupId>
            <artifactId>api</artifactId>
            <version>11.4-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- BlueSlimeCore -->
        <dependency>
            <groupId>com.github.sirblobman.api</groupId>
            <artifactId>core</artifactId>
            <version>2.9-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- PvPManager -->
        <dependency>
            <groupId>me.NoChance.PvPManager</groupId>
            <artifactId>pvpmanager</artifactId>
            <version>3.18.21</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
</project>
